--- a/mos.yml
+++ b/mos.yml
@@ -21,7 +21,7 @@ config_schema:
   - ["rpc.ws.ssl_ca_cert", "s", {title : "TLS CA file"}]
 
 libs:
-  - origin: https://github.com/mongoose-os-libs/rpc-common
+  - location: https://github.com/mongoose-os-libs/rpc-common
 
 init_after:
   - http-server
